--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -23,7 +23,7 @@
   font-weight: bold;
 }
 
-.logout-button {
+.button {
   padding: 0.5rem 1rem;
   border-radius: 5px;
   background-color: #4cd964;
